--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ futures = { version = "0.3.29", default-features = false, features = ["std"] }
 time = { version = "0.3.36", features = ["formatting", "parsing", "serde-well-known"] }
 base64 = { version = "0.22.0" }
 secrecy = { version = "0.8.0", features = ["serde"] }
+zeroize = { version = "1.7" } # Not used in serenity, but bumps the minimal version from secrecy
 arrayvec = { version = "0.7.4", features = ["serde"] }
 serde_cow = { version = "0.1.0" }
 small-fixed-array = { version = "0.2", features = ["serde"] }
