--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ serde = { version = "1.0.192", features = ["derive"] }
 url = { version = "2.4.1", features = ["serde"] }
 tokio = { version = "1.34.0", features = ["fs", "macros", "rt", "sync", "time", "io-util"] }
 futures = { version = "0.3.29", default-features = false, features = ["std"] }
-dep_time = { version = "0.3.36", package = "time", features = ["formatting", "parsing", "serde-well-known"] }
+time = { version = "0.3.36", features = ["formatting", "parsing", "serde-well-known"] }
 base64 = { version = "0.22.0" }
 secrecy = { version = "0.8.0", features = ["serde"] }
 arrayvec = { version = "0.7.4", features = ["serde"] }
